--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-todos",
+  "name": "react-todos.glweems.com",
   "version": "0.1.0",
   "dependencies": {
     "bulma": "^0.7.4",
@@ -12,7 +12,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "now-build": "npm run build"
   },
   "eslintConfig": {
     "extends": "react-app"
