--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
-  "name": "react-todos.glweems.com",
-  "version": "0.1.0",
+  "name": "react-todos",
+  "version": "1.0.0",
+  "description": "Simple todo application created using react.js.",
+  "author": "Garrett Weems <gwgraphicdesign@gmail.com> (https://glweems.com)",
+  "repository": "github:glweems/react-todos",
   "dependencies": {
     "bulma": "^0.7.4",
-    "node-sass": "^4.11.0",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
     "react-scripts": "2.1.5"
   },
+  "license": "MIT",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -23,5 +26,12 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "babel-plugin-module-resolver": "^3.2.0",
+    "node-sass": "^4.11.0",
+    "react-router-dom": "^4.3.1",
+    "styled-components": "^4.1.3",
+    "uuid": "^3.3.2"
+  }
 }
